--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Welcome To</h1>
             <h1><span> BIVUS </span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <p>The key to web development is the work that a web designer does to make every design dynamic. I am currently establishing myself as a web developer.  I think I will be a skilled web developer gradually.I will not stop until I become the Web Development Hero.</p>
             <a class="anchor-button" target="_blank" href="https://linkedin.com/in/Romeo-Hore">HIRE ME</a>
         </div>
         <div class="half-width">
@@ -28,7 +28,7 @@
         <div class="half-width">
             <h2>Dream Big</h2>
             <h3>Become a web developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. My dream is to build a career as a web developer.  I dream of being the best web-developer, so I am trying my best to fulfill my dream.  I think if I try to fulfill my dream, success will automatically find me.  I dream of success because a successful person will be successful when he will be skillful at his job.</p>
             <a class="anchor-button" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
